# advent-of-code

./: .gitignore  README.md  coverage.out
2015/day1/: main.go  main_test.go
2015/day1_java/: Day1.java
2021/day1/src/: main.rs
2023/: go.mod
2023/day1/: input2.txt  main.go  main_test.go
2023/day10/: main.py
2023/day11/: main.py
2023/day12/: main.py
2023/day13/: main.py
2023/day14/: main.py
2023/day15/: main.go  main_test.go
2023/day16/: main.go  main_test.go
2023/day17/: main.py
2023/day19/: main.go  main_test.go
2023/day2/: main.go  main_test.go
2023/day23/: main.py
2023/day24/: main.go  main.py
2023/day25/: main.py
2023/day3/: main.go  main_test.go
2023/day4/: main.go  main_test.go
2023/day5/: main.go  main_test.go
2023/day6/: main.go  main_test.go
2023/day7/: main.go  main_test.go
2023/day8/: main.py
2023/day9/: main.py
2024/rust/: .env  Cargo.toml  justfile
2024/rust/daily-template/: Cargo.toml  cargo-generate.toml
2024/rust/day1/: Cargo.toml
2024/rust/day10/: Cargo.toml
2024/rust/day11/: Cargo.toml
2024/rust/day11/benches/: main.rs
2024/rust/day11/src/: lib.rs  main.rs
2024/rust/day12/: Cargo.toml
2024/rust/day13/: Cargo.toml
2024/rust/day14/: Cargo.toml
2024/rust/day15/: Cargo.toml
2024/rust/day15/benches/: main.rs
2024/rust/day15/src/: lib.rs  main.rs
2024/rust/day16/: Cargo.toml
2024/rust/day7/: Cargo.toml
2024/rust/day7/benches/: main.rs
2024/rust/day7/src/: lib.rs  main.rs
util/: file.go
year2016/day1/: Day1.java
year2016/day2/: Day2.java
year2016/day3/: Day3.java
(+51 files in other folders)
